Fixed Character Triats Tags alignment

--- a/src/styles/actor/character/_character.scss
+++ b/src/styles/actor/character/_character.scss
@@ -142,6 +142,10 @@
         display: flex;
         flex-wrap: wrap;
 
+        .tags {
+            width: 100%;
+        }
+
         .pc {
             display: flex;
             flex-direction: column;
